--- a/debian/control
+++ b/debian/control
@@ -13,6 +13,7 @@ Build-Depends: debhelper (>= 9),
                python3-all-dev (>= 3.3),
                python3-all-dbg (>= 3.3),
                python3-setuptools,
+               python3-jinja2,
                base-files (>= 11) | python-appdirs,
                python3-appdirs | base-files (<< 7.2),
                rst2pdf,
@@ -33,6 +34,7 @@ Package: nuitka
 Architecture: all
 Depends: gcc (>= 5.0) | g++ (>= 4.4) | clang (>= 3.0),
          scons (>= 2.0.0),
+         python3-jinja2,
          python3-appdirs | base-files (<< 7.2),
          python3-dev,
          ccache,
