Optimization: Faster calls, esp. with keyword arguments
* Make sure specialized calls are also giving C functions SystemError in
  case they return NULL.

* Also make sure we use call code that takes advantage of tuple size
  knowledge for constant positional arguments.

* Check tuple size to catch errors in using the POSARGS tuple variants.

* Add specialization for keywords only and mixed calls for large gains
  as dictionaries might be avoided.

* Merge CompiledCodeHelpers and CompiledFunction for better friendship
  of code.

* For unknown called objects, use "tp_vectorcall" if available for 3.8
  or higher.

* Pass around argument and keyword value vectors as constant values, as
  these are not modified, might help compiler optimization.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -42,3 +42,6 @@ recursive-include tests/standalone *.py
 recursive-include tests/onefile *.py
 recursive-include tests/reflected *.py
 recursive-include tests/plugins *.py
+
+# Templates for code generation.
+recursive-include nuitka/codegen/templates *.j2
