Debian: Added missing dependency needed for --static-libpython=yes or auto on Debian Python

--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Build-Depends: debhelper (>= 9),
                python3-all-dbg (>= 3.3),
                python3-setuptools,
                python3-jinja2,
+               zlib1g-dev,
                base-files (>= 11) | python-appdirs,
                python3-appdirs | base-files (<< 7.2),
                rst2pdf,
@@ -37,6 +38,7 @@ Depends: gcc (>= 5.0) | g++ (>= 4.4) | clang (>= 3.0),
          python3-jinja2,
          python3-appdirs | base-files (<< 7.2),
          python3-dev,
+         zlib1g-dev,
          ccache,
          ${misc:Depends},
          ${python:Depends},
