Debian: For older systems with Python2, need to depend on Jinja2 for it

--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Build-Depends: debhelper (>= 9),
                base-files (>= 11) | python-all-dbg (>= 2.6.6-2),
                base-files (>= 11) | python-all-dev (>= 2.6.6-2),
                base-files (>= 11) | python-setuptools,
+               base-files (>= 11) | python-jinja2,
                scons,
                python3-all-dev (>= 3.3),
                python3-all-dbg (>= 3.3),
