--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ __pycache__/
 *.build
 *.onefile-build
 *.dist
+*.app
 *.key
 *.optimization.log
 *.inclusion.log
@@ -34,8 +35,6 @@ tests/basics/BigConstants.py
 tests/generated/*.py
 !tests/generated/run_all.py
 tests/PyPI-pytest/venv_*
-*.dist
-*.build
 *.dblite
 *.pdb
 releases/
