--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,8 @@
     "python.analysis.autoSearchPaths": false,
     "python.analysis.extraPaths": ["nuitka/build/inline_copy/lib/scons-3.1.2", "nuitka/build/inline_copy/clcache"],
     "python.formatting.provider": "black",
+    "python.analysis.diagnosticSeverityOverrides": {
+        "reportMissingImports": "none"
+    },
     "restructuredtext.confPath": "",
-    "python.analysis.diagnosticSeverityOverrides": {"reportMissingImports": "none"},
 }
