--- a/nuitka/plugins/standard/anti-bloat.yml
+++ b/nuitka/plugins/standard/anti-bloat.yml
@@ -96,8 +96,9 @@ numpy.testing._private.pytesttester:
         pass
 
 numpy.core.overrides:
+  # see #1189, apparently an upstream problem hard to grasp
   description:
-    "fix numpy for python -OO, see #1189, apparently an upstream problem hard to grasp"
+    "workaround for numpy and python flag 'no_docstrings'"
   replacements:
     "add_docstring(implementation, dispatcher.__doc__)" : "'''add_docstring(implementation, dispatcher.__doc__ or '')'''"
 
