--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -22,6 +22,7 @@ jobs:
             - '3.7'
             - '3.8'
             - '3.9'
+            - '3.10'
     name: Ubuntu Python ${{ matrix.python_version }}
     steps:
       - uses: actions/checkout@v2
@@ -78,6 +79,9 @@ jobs:
             - '3.7'
             - '3.8'
             - '3.9'
+            # TODO: The orderedset wheel doesn't build yet, either disable that
+            # or find an alternative.
+            # - '3.10'
     name: macOS Python ${{ matrix.python_version }}
     steps:
       - uses: actions/checkout@v2
@@ -123,6 +127,9 @@ jobs:
             - '3.7'
             - '3.8'
             - '3.9'
+            # TODO: The orderedset wheel doesn't build yet, either disable that
+            # or find an alternative.
+            # - '3.10'
     name: Windows Python ${{ matrix.python_version }}
     steps:
       - uses: actions/checkout@v2
