--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -12,7 +12,8 @@
         "ms-vscode.cpptools",
         "mervin.markdown-formatter",
         "stkb.rewrap",
-        "trond-snekvik.simple-rst"
+        "trond-snekvik.simple-rst",
+        "redhat.vscode-yaml"
     ],
     // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
     "unwantedRecommendations": [
