Quality: Added yamllint checker tool

--- a/requirements-devel.txt
+++ b/requirements-devel.txt
@@ -17,6 +17,7 @@ rstcheck == 3.3.1 ; python_version == '2.7' or python_version >= '3.7'
 black == 21.9b0 ; python_version >= '3.7'
 toml >= 0.10.1 ; python_version >= '3.7'
 isort == 5.9.3 ; python_version >= '3.7'
+yamllint == 1.26.3 ; python_version >= '3.7'
 rstfmt == 0.0.10 ; python_version >= '3.7'
 redbaron == 0.9.2 ; python_version >= '2.7'
 baron == 0.9 ; python_version >= '2.7'
